# haskell-factor

./: README.md  factor.cabal
src/: Factor.hs  Main.hs
test/: TestFactor.hs
