cabal-version: >=1.10

name: factor
version: 0.1.0.0
license: Apache-2.0
license-file: LICENSE
author: John Sullivan
maintainer: john.sullivan.mscs@protonmail.com
build-type: Simple
extra-source-files: CHANGELOG.md

executable factor
  main-is: Main.hs
  hs-source-dirs: src
  build-depends: base >=4.11
  other-modules: Factor
  default-language: Haskell2010

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends: base >=4.11
  exposed-modules: Factor
  
test-suite test-factor
  type: exitcode-stdio-1.0
  main-is: TestFactor.hs
  hs-source-dirs: test
  build-depends: base,
                 factor,
                 test-framework,
                 test-framework-hunit,
                 HUnit
